<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPageActivity"
    android:theme="@style/AppTheme"
    android:id="@+id/mainPageLayout">

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="300dp"
        android:theme="@style/RippleMain"
        android:text="@string/strPlay"
        android:background="@drawable/ripple_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/strRegister"
        android:theme="@style/RippleSecondary"
        android:background="@drawable/ripple_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strLogin"
        android:theme="@style/RippleSecondary"
        android:background="@drawable/ripple_secondary"
        app:layout_constraintStart_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <Button
        android:id="@+id/btnScore"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strScores"
        android:theme="@style/RippleSecondary"
        android:background="@drawable/ripple_secondary"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strProfile"
        android:theme="@style/RippleTertiary"
        android:background="@drawable/ripple_tertiary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScore" />

    <ImageView
        android:id="@+id/menu_wallpaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="605dp"
        android:layout_height="583dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_no_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/appMainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:text="unibArcade"
            android:fontFamily="@font/sega"
            android:textColor="@color/colorAccentPrimary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:rotation="350" />

        <TextView
            android:id="@+id/txtCreators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TeamBarrella"
            android:textSize="60dp"
            android:textColor="@color/colorPrimaryVeryLight"
            android:fontFamily="@font/brat"
            android:rotation="350"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/ripple_logout"
            android:text="Logout"
            android:textSize="19sp"
            android:textAllCaps="false"
            android:textColor="@color/colorAccentPrimary"
            android:drawableStart="@drawable/logout"
            android:padding="20dp"/>

    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>