<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.RegisterActivity"
    android:id="@+id/registerActivityLayout">

    <!-- ********************* -->
    <!-- Activity for register -->
    <!-- ********************* -->

    <ImageView
        android:id="@+id/form_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/tlbRegister" />

    <ImageView
        android:id="@+id/form_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginVertical="20dp"
        android:src="@drawable/icon_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlbRegister" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="@dimen/editTextDefaultWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editTextDefaultMarginTop"
        android:theme="@style/AppTheme.EditText"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_icon"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNick"
            android:layout_width="@dimen/editTextDefaultWidth"
            android:layout_height="@dimen/editTextDefaultHeight"
            android:layout_marginTop="@dimen/editTextDefaultMarginTop"
            android:hint="@string/strNick"
            android:theme="@style/AppTheme.EditText"
            android:textColor="@color/colorAccentPrimary"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_icon" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="@dimen/editTextDefaultWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:theme="@style/AppTheme.EditText"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="@dimen/editTextDefaultWidth"
            android:layout_height="@dimen/editTextDefaultHeight"
            android:layout_marginTop="@dimen/editTextDefaultMarginTop"
            android:hint="@string/strEmail"
            android:theme="@style/AppTheme.EditText"
            android:textColor="@color/colorAccentPrimary"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="@dimen/editTextDefaultWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editTextDefaultMarginTop"
        android:theme="@style/AppTheme.EditText"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPwd"
            android:layout_width="@dimen/editTextDefaultWidth"
            android:layout_height="@dimen/editTextDefaultHeight"
            android:layout_marginTop="@dimen/editTextDefaultMarginTop"
            android:hint="@string/strPwd"
            android:theme="@style/AppTheme.EditText"
            android:textColor="@color/colorAccentPrimary"
            android:fontFamily="@font/zrnic"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="@dimen/editTextDefaultWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editTextDefaultMarginTop"
        android:theme="@style/AppTheme.EditText"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPwdVerify"
            android:layout_width="@dimen/editTextDefaultWidth"
            android:layout_height="@dimen/editTextDefaultHeight"
            android:hint="@string/strPwdRepeat"
            android:theme="@style/AppTheme.EditText"
            android:textColor="@color/colorAccentPrimary"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/editPwd"
            app:layout_constraintTop_toBottomOf="@+id/editPwd" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlbRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarDefaultHeight"
        android:theme="@style/AppTheme.Toolbar"
        android:elevation="2dp"
        app:titleTextColor="@color/colorAccentPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:theme="@style/RippleMain"
        android:background="@drawable/ripple_main"
        android:text="@string/strRegister"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>